# Structural-Analysis

./: .gitattributes  .gitignore  .ignore  .phase1_missing_artifact  AGENTS.md  DESIGN.md  README.md  commercial_gap_analysis.md  index.html  opencode.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  tsconfig.json  vite.config.ts
.betelgeuze/: action_log.md  artifact_manifest.json  codex_runtime.json  confirmation.md  intent_spec.json  intent_spec.md  oracle_ladder.json  project_contract.yaml  project_profile.json  quality_plan.md  recovery.json  state.md  task.json  todo.md  trace.jsonl  verification.json  work_queue.md
.github/: pull_request_template.md
docs/: architecture-definition-document.md  commercial-structural-solver-product-gap-ledger.md  commercialization-gap-current-state.md  commercialization-improvement-priority-assessment.md  continued-improvement-backlog.md  developer_preview_final_gate_action_register.md  engine-ai-and-comparison-commercialization-gaps.md  expert-api-quickstart.md  frontend-build-reproducibility.md  frontend-visualization-improvement-plan.md  frontend-visualization-next-steps.md  g1-adaptive-regularization-reference-newton.md  g1-component-operator-reconciliation-audit.md  g1-frame-operator-reconciliation-audit.md  g1-global-operator-mismatch-audit.md  g1-mgt-physical-line-search-smoke.md  g1-mgt-preconditioned-line-search-smoke.md  g1-mgt-sparse-direct-line-search-smoke.md  g1-null-space-mode-audit.md  g1-physical-consistent-global-newton-operator.md  g1-physical-consistent-line-search-preview.md  g1-real-service-tangent-mgt-closure.md  g1-regularized-assembled-direction-smoke.md  g1-regularized-reference-newton-candidate.md  g1-true-newton-reference-candidate.md  github-documentation-status.md  independent-commercial-product-gap-reassessment.md  independent-commercial-productization-plan.md  korean-medium-large-drawing-data-guide.md  midas-gen-same-mesh-result-schema.md  open-data-artifact-restore-runbook.md  pm-release-gate-milestones.md  production-ops-security.md  real-project-corpus.md  release-limitation-manual.md  release-publication-runbook.md  release-validation-manual.md  residual-correction-ai-engine-advancement-plan.md  review-checklist-mobile.md  runtime-production-packaging.md  (+11 more)
scripts/: ai-dangerous-command-check.sh  ai-preflight.sh  ai-run-kiro-design.sh  ai-verify.sh  ai-worker-cursor-host-bridge.sh  ai-worker-cursor.sh  ai-worker-kiro.sh  ai-worker-opencode.sh  build-benchmark-catalog.mjs  build-workbench-evidence-bundle.mjs  build_ai_decision_review_artifacts.py  build_ai_engine_productization_contracts.py  build_ai_freeze_boundary_status.py  build_ai_input_code_guard_artifacts.py  build_ai_orchestration_preflight_report.py  build_ai_physics_guard_execution.py  build_ci_consecutive_pass_manifest.py  build_ci_streak_intake_packet.py  build_core_family_p95_report.py  build_customer_shadow_evidence_intake_packet.py  build_developer_preview_final_gate_owner_packet.py  build_developer_preview_rc_status.py  build_developer_preview_readiness.py  build_evidence_console_scope_status.py  build_f2g_f2h_authoritative_surface_recovery_packet.py  build_f2g_f2h_surface_preflight.py  build_f2h_lightweight_continuation_status.py  build_fresh_full_validation_lane_status.py  build_fresh_validation_receipt.py  build_frontend_dependency_audit_report.py  build_g1_consistent_newton_full_load_checkpoint_candidate_runner.py  build_g1_f2g_f2h_cause_narrowing_status.py  build_g1_global_connectivity_load_path_audit.py  build_g1_load_dependent_near_null_geometric_stiffness_comparison.py  (+262 more)
(+11995 files in other folders)
