[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arch-struct-analysis-phase1"
version = "0.1.0"
description = "Structural dynamics/AI validation pipeline (Phase1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
  "jsonschema>=4.20",
]

[project.optional-dependencies]
ml = [
  "torch>=2.1",
]
dev = [
  "pytest>=8.0",
  "reportlab>=4.0",
  "ruff>=0.5",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
extend-exclude = [
  "implementation/phase1/_vendor/**",
  "implementation/phase1/open_data/demo/**",
]

[tool.ruff.lint.per-file-ignores]
# This legacy monolithic HTML generator is tracked for a dedicated module split.
# Keep F841 scoped here while smaller source/report scripts are actively cleaned.
"implementation/phase1/generate_structural_optimization_visualization_viewer.py" = ["F841"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
