[build-system]
requires = ["setuptools>=68", "wheel", "tomli; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "structural-optimization-workbench"
version = "1.0.0"
description = "Structural dynamics/AI validation pipeline (Phase1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
  "jsonschema>=4.20",
]

[project.optional-dependencies]
ml = [
  "torch>=2.1",
]
dev = [
  "pytest>=8.0",
  "reportlab>=4.0",
  "ruff>=0.5",
]

[project.scripts]
structural-analysis = "structural_analysis.api.cli:main"
structural-analysis-benchmark = "structural_analysis.benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["structural_analysis*"]

[tool.setuptools.package-data]
structural_analysis = ["schemas/*.json"]

[tool.ruff]
extend-exclude = [
  "implementation/phase1/_vendor/**",
  "implementation/phase1/open_data/demo/**",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
