[metadata]
name = structural-optimization-workbench
version = 1.0.0
description = Structural dynamics/AI validation pipeline (Phase1)
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.23
    matplotlib>=3.7
    jsonschema>=4.20
include_package_data = True

[options.packages.find]
where = src
include = structural_analysis*

[options.package_data]
structural_analysis = schemas/*.json

[options.entry_points]
console_scripts =
    structural-analysis = structural_analysis.api.cli:main
    structural-analysis-benchmark = structural_analysis.benchmark.cli:main
